--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -1497,6 +1497,8 @@ body {
 
 }
 
+
+
 .controller-portal-edit {
   .form-control {
     width: 20em;
@@ -1535,4 +1537,35 @@ body {
   color: black;
   opacity: 1;
   z-index: 1002;
+}
+
+
+.SelectMembershipPlanController_class {
+  table {
+    width: 100%;
+
+    tr {
+
+    }
+
+    td,th {
+      padding: 2px;
+      border: solid gray 2px;
+    }
+
+    th {
+      text-align: center;
+    }
+
+    h5 {
+      text-align: left;
+      font-weight: bold;
+    }
+
+    hr {
+      margin: 10px 0px;
+    }
+
+
+  }
 }
