--- a/profapp/templates/company/companies_partners.html
+++ b/profapp/templates/company/companies_partners.html
@@ -12,8 +12,169 @@
         {% include 'company/company_base_angular.html' %}
     {% endblock company_base %}
 
+    {% raw %}
+
+    <script type="text/ng-template" id="set_membership_plan.html">
+        <div class="SelectMembershipPlanController_class"
+             af ng-model="data" af-after-save="afterSave" af-amid-load="amidLoad" af-url="{{ url_set_membership_plan() }}">
+            <div class="modal-header">
+                <h3 class="modal-title">{{ ::_('please select plan') }}</h3>
+                <h4>{{ __('for company `%(data.membership.company.name)s` in portal `%(data.membership.portal.name)s`')
+                    }}</h4>
+            </div>
+
+            <div class="modal-body">
+
+                <table>
+                    <tr>
+                        <th class="border-none" colspan="7"><h5>{{ ::_('current active plan') }}</h5></th>
+                    </tr>
+
+
+                    <tr ng-if="!data.membership.membership_plan_used">
+                        <td class="border-none" colspan="7"><em>{{ ::_('This membership running now without any plan')
+                            }}</em>
+                            <hr/>
+                        </td>
+                    </tr>
+
+                    <tr ng-if="data.membership.membership_plan_used">
+                        <td class="border-none" colspan="7"><h5>{{data.membership.membership_plan_used }}</h5>
+                            <hr/>
+                        </td>
+                    </tr>
+
+
+                    <tbody  ng-if="data.membership.requested_membership_plan">
+                    <tr>
+                        <th class="border-none" colspan="7"><h5>{{ ::_('Member company requested following plan')
+                            }}</h5>
+                        </th>
+                    </tr>
+
+                    <tr class="link" ng-click="data.selected_by_user_plan_id = data.membership.requested_membership_plan.id">
+                        <td class="tac">
+                            <div pr-validation-answer="data_validation:selected_by_user_plan_id"><input
+                                    ng-value="data.membership.requested_membership_plan.id"
+                                    type="radio" ng-model="data.selected_by_user_plan_id"/></div>
+                        </td>
+                        <td>{{ data.membership.requested_membership_plan.name }}</td>
+                        <td>{{ data.membership.requested_membership_plan.price }} {{
+                            data.membership.requested_membership_plan.currency_id }}
+                        </td>
+                        <td>{{ data.membership.requested_membership_plan.duration }}</td>
+                        <td class="w1em">{{ publication_count(data.membership.requested_membership_plan, 'open') }}</td>
+                        <td class="w1em">{{ publication_count(data.membership.requested_membership_plan, 'registered')
+                            }}
+                        </td>
+                        <td class="w1em">{{ publication_count(data.membership.requested_membership_plan, 'payed') }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="border-none tar" colspan="7">
+                            <button class="btn btn-primary" type="button"
+                                ng-click="$af.save(data)" ng-disabled="data.selected_by_user_plan_id !== data.membership.requested_membership_plan.id || !$af.isActionAllowed(data, 'save') ">{{ ::_('Confirm requested plan') }}</button>
+                        </td>
+                    </tr>
+                    </tbody>
+
+                    <tr ng-if="data.membership.requested_membership_plan">
+                        <td class="border-none" colspan="7">
+                            <hr/>
+                        </td>
+                    </tr>
+
+
+                    <tr>
+                        <th class="border-none" colspan="7"><h5>{{ ::_('please select membership plan') }}</h5></th>
+                    </tr>
+
+                    <tr ng-if="!data.select.plans.length">
+                        <th class="border-none error" colspan="7"><h5>{{ ::_('Sorry there is no plan in this portal')
+                            }}</h5></th>
+                    </tr>
+
+                    <tbody ng-if="data.select.plans.length">
+
+                    <tr>
+                        <td rowspan="2"></td>
+                        <th rowspan="2">{{ ::_('Plan name') }}</th>
+                        <th rowspan="2">{{ ::_('Plan price') }}</th>
+                        <th rowspan="2">{{ ::_('Plan duration') }}</th>
+                        <th colspan="3" class="nowrap">{{ ::_('Publication count') }}</th>
+                    </tr>
+
+                    <tr>
+                        <th>{{ ::_('open') }}</th>
+                        <th>{{ ::_('registered') }}</th>
+                        <th>{{ ::_('payed') }}</th>
+                    </tr>
+
+                    <tr class="link" ng-click="data.selected_by_user_plan_id = plan.id"
+                        ng-if="plan.id !== data.membership.requested_membership_plan.id"
+                        ng-repeat="plan in data.select.plans">
+                        <td class="tac">
+                            <div pr-validation-answer="data_validation:selected_by_user_plan_id"><input
+                                    ng-value="plan.id" type="radio" ng-model="data.selected_by_user_plan_id"/></div>
+                        </td>
+                        <td>{{ plan.name }}</td>
+                        <td>{{ plan.price }} {{ plan.currency_id }}</td>
+                        <td>{{ plan.duration }}</td>
+                        <td class="w1em">{{ publication_count(plan, 'open') }}</td>
+                        <td class="w1em">{{ publication_count(plan, 'registered') }}</td>
+                        <td class="w1em">{{ publication_count(plan, 'payed') }}</td>
+                    </tr>
+                    <td class="border-none tar" colspan="7">
+                            <button class="btn btn-primary" type="button"
+                                ng-click="$af.save(data)" ng-disabled="
+                                data.selected_by_user_plan_id === data.membership.requested_membership_plan.id ||
+                                !$af.isActionAllowed(data, 'save') ">{{ ::_('Set selected plan') }}</button>
+                        </td>
+                    </tbody>
+
+                </table>
+
+
+            </div>
+
+            <div class="modal-footer">
+                <button class="btn btn-warning" type="button" ng-click="cancel()">{{ _('Cancel') }}</button>
+            </div>
+        </div>
+    </script>
+    {% endraw %}
 
     <script>
+
+        module.controller('SetMembershipPlanController', function ($scope, $ok, $uibModalInstance, membership_id) {
+
+            $scope.$$translate = {{ translates('SetMembershipPlanController')|safe }};
+
+            $scope.url_set_membership_plan = {{ raw_url_for('portal.set_membership_plan')|safe }};
+            $scope.membership_id = membership_id;
+
+            $scope.afterSave = function (resp) {
+                $uibModalInstance.close(resp)
+            };
+
+            $scope.amidLoad = function (data) {
+                if (data['membership'] && data['membership']['requested_membership_plan']) {
+                    data['selected_by_user_plan_id'] = data['membership']['requested_membership_plan']['id'];
+                }
+                return data;
+
+            };
+
+            $scope.publication_count = function (plan, pub_type) {
+                var ret = plan['publication_count_' + pub_type];
+                return ret < 0 ? 'unlimited' : (ret ? ret : '0');
+            };
+
+            $scope.cancel = $uibModalInstance.dismiss;
+
+        });
+
+
         module.controller('company_partners', function ($scope, $ok, $uibModal) {
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_partners');
             $scope.$$translate = {{translates('company_partners') | safe}};
@@ -42,31 +203,54 @@
                 if (column_name == 'actions') {
                     if (action === 'ALLOW') {
                         window.location.href = $scope.url_company_partner_details({
-                            company_id: row.company_id, member_id: row.member.company.id
+                            company_id: row.company_id, member_id: row.membership.company.id
                         });
                         return;
                     } else {
-                            return $ok($scope.url_change_status({
-                                company_id: row.company_id,
-                                portal_id: row.portal_id
-                            }), {action: action, who: row.who, partner_id: row.member.company.id}, function (resp) {
-                               $scope.gridApi.grid.grid_change_row(resp);
-                            }).finally(function () {})
+                        return $ok($scope.url_change_status({
+                            company_id: row.company_id,
+                            portal_id: row.portal_id
+                        }), {action: action, who: row.who, partner_id: row.membership.company.id}, function (resp) {
+                            $scope.gridApi.grid.grid_change_row(resp);
+                        }).finally(function () {
+                        })
                     }
                 }
+            };
+
+            $scope.set_membership_plan = function (id, row, column_name) {
+                var modalInstance = $uibModal.open({
+                    templateUrl: 'set_membership_plan.html',
+                    controller: 'SetMembershipPlanController',
+                    resolve: resolveDictForAngularController({
+                        membership_id: row['id']
+                    })
+                });
+                modalInstance.result.then(function (resp) {
+                    $scope.gridApi.grid.grid_change_row(resp);
+                });
             };
 
             $scope.gridOptions1 = $.extend({}, $scope.gridOptions, {
                 urlLoadGridData: $scope.url_companies_partners,
                 columnDefs: [
                     {
-                        name: 'member.company.name',
+                        name: 'membership.company.name',
                         type: 'link',
-                        img_url: 'member.company.logo.url',
-                        href: 'portal_link(row.entity.member.company.own_portal.host)'
+                        img_url: 'membership.company.logo.url',
+                        href: 'portal_link(row.entity.membership.company.own_portal.host)'
                     },
-                    {name: 'member.status', filter: {type: 'multi_select', default_selected: true}},
-                    {name: 'member.rights', width: '200', type: 'icons', afilter: {type: 'input'}},
+                    {
+                        name: 'membership_plan',
+                        onclick: 'set_membership_plan',
+                        render: function (row, value) {
+                            row = row['membership'];
+                            return (row['membership_plan_used'] ? row['membership_plan_used']['name'] : '<i>None</i>') +
+                                    (row['requested_membership_plan'] ? (' (<em>' + row['requested_membership_plan']['name'] + '</em>)') : '');
+                        }
+                    },
+                    {name: 'membership.status', afilter: {type: 'multi_select', default_selected: true}},
+                    {name: 'membership.rights', width: '200', type: 'icons', afilter: {type: 'input'}},
                     {
                         name: 'actions', width: '*', type: 'actions', onclick: 'grid_action', classes: function (id,
                                                                                                                  entity, field) {
