mutual foreign keys

--- a/profapp/templates/flashed-messages.html
+++ b/profapp/templates/flashed-messages.html
@@ -63,8 +63,8 @@
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 img-message" >
                 <img ng-src="{{ static_address('images/0.gif') }}" width="128" height="129" alt="{{ alert.type }}">
             </div>
-            <div class="col-lg-8 col-md-8 col-xs-8 col-sm-8">
-                <i class="fa fa-times" ng-click="closeAlert($index)"></i>
+            <div class="col-lg-8 col-md-8 col-xs-8 col-sm-8"  ng-click="closeAlert($index)">
+                <i class="fa fa-times"></i>
                 <h3>{{ _(alert.type + '!') }}</h3>
                 <p>{{ alert.msg }}</p>
             </div>
